--- a/src/_posts/2013-04-23-callmom.md
+++ b/src/_posts/2013-04-23-callmom.md
@@ -2,7 +2,7 @@
 layout: default
 body_class: "callmom light-bg"
 image: callmom.png
-published: false
+published: true
 ---
 
 <p class="sage-advice">It's been a damn month, call your mom.</p>
